refactor: red notification dot

--- a/frontend/src/styles/appBar.css
+++ b/frontend/src/styles/appBar.css
@@ -18,7 +18,7 @@
     height: 7px;
     border-radius: 50%;
     width: 7px;
-    /* background: red; */
+    background: red;
     border: 1px solid white;
     position: absolute;
     top: -1px;
